created wind speed and weather condition

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                     <table >
                         <tr >
                         <th>
-                        <p> 20% Rain </p>
+                        <p class="weatherCondition"> Sunny </p>
                         </th>
                         <th>
-                        <p> 18 km/h  </p>
+                        <p class="windSpeedP"> 18 km/h  </p>
                         </th>
                         <th>
                         <p> West </p>
