--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <p class="windSpeedP"> 18 km/h  </p>
                         </th>
                         <th>
-                        <p> West </p>
+                        <p class="provinceP"> West </p>
                         </th>
                     </tr>
                     <tr>
@@ -130,20 +130,35 @@
             </div>
             <div class="col-md-6">
                 <div class="p-3 bg-info ">
-                  <table>
+                  <table class="mb-5">
                       <tr>
-                          <th><h2>Sunrise</h2></th>
-                          <th><h2>SunSet</h2></th>
+                          <th><h2 >Sunrise</h2></th>
+                          <th><h2 >SunSet</h2></th>
                       </tr>
                       <tr>
                           <th><h1><i class="bi bi-sunrise"></i></h1></th>
                           <th><h1><i class="bi bi-sunset"></h1></i></th>
                       </tr>
                       <tr>
-                          <th><h2>06.02 A.M</h2></th>
-                          <th><h2>05.45 P.M</h2></th>
+                          <th><h2 class="sunriseP">06.02 A.M</h2></th>
+                          <th><h2 class="sunsetP">05.45 P.M</h2></th>
                       </tr>
                   </table>
+                  <br>
+                  <table class="mt-5">
+                    <tr>
+                        <th><h2 >Humidity</h2></th>
+                        <th><h2 >Wind Direction</h2></th>
+                    </tr>
+                    <tr>
+                        <th><h1><i class="bi bi-moisture"></i></h1></th>
+                        <th><h1><i class="bi bi-wind"></i></i></th>
+                    </tr>
+                    <tr>
+                        <th><h2 class="humidityP">06.02 A.M</h2></th>
+                        <th><h2 class="windDirec">05.45 P.M</h2></th>
+                    </tr>
+                </table>
                   <br>
                 </div>
             </div>
