--- a/index.html
+++ b/index.html
@@ -168,6 +168,70 @@
     </section>
 
 
+    <section>
+      <div class="container-fluid mt-5">
+        <div class="container">
+          <div class="row text-center">
+            <div class="col day-card">
+                <h5>Tuesday</h5>
+                <p>23°C</p>
+                <img src="./assests/images/rain-cloud.png" alt="Cloudy">
+                <p></p>
+                <p>20% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
+                <p>18 km/h<h3><i class="bi bi-wind"></i></h3></h3></p>
+                <p>West <h3><i class="bi bi-compass"></i></h3></p>
+            </div>
+            <div class="col day-card">
+                <h5>Wednesday</h5>
+                <p>23°C</p>
+                <img src="./assests/images/rain-cloud.png" alt="Cloudy">
+                <p></p>
+                <p>20% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
+                <p>18 km/h <h3><i class="bi bi-wind"></i></h3></p>
+                <p>West <h3><i class="bi bi-compass"></i></h3></p>
+            </div>
+            <div class="col day-card">
+                <h5>Thursday</h5>
+                <p>23°C</p>
+                <img src="./assests/images/rain-cloud.png" alt="Cloudy">
+                <p></p>
+                <p>20% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
+                <p>18 km/h <h3><i class="bi bi-wind"></i></h3></p>
+                <p>West <h3><i class="bi bi-compass"></i></h3></p>
+            </div>
+            <div class="col day-card">
+                <h5>Friday</h5>
+                <p>23°C</p>
+                <img src="./assests/images/rain-cloud.png" alt="Cloudy">
+                <p></p>
+                <p>20% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
+                <p>18 km/h <h3><i class="bi bi-wind"></i></h3></p>
+                <p>West <h3><i class="bi bi-compass"></i></h3></p>
+            </div>
+            <div class="col day-card">
+                <h5>Saturday</h5>
+                <p>23°C</p>
+                <img src="./assests/images/rain-cloud.png" alt="Cloudy">
+                <p></p>
+                <p>20% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
+                <p>18 km/h <h3><i class="bi bi-wind"></i></h3></p>
+                <p>West <h3><i class="bi bi-compass"></i></h3></p>
+            </div>
+            <div class="col day-card">
+                <h5>Sunday</h5>
+                <p>23°C</p>
+                <img src="./assests/images/rain-cloud.png" alt="Cloudy">
+                <p></p>
+                <p>20% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
+                <p>18 km/h <h3><i class="bi bi-wind"></i></h3></p>
+                <p>West <h3><i class="bi bi-compass"></i></h3></p>
+            </div>
+        </div>
+        </div>
+      </div>
+    </section>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
