--- a/index.html
+++ b/index.html
@@ -71,33 +71,9 @@
         </button>
       </div>
     </section>
-    <!-- <section>
-      <div class="container mt-5">
-        <div class="container-fluid">
-            <div class="row">
-              <div class="col-md-6">
-                  <div class="p-3 bg-info rounded">
-                      <div class="d-flex">
-                        <div class="d-flex flex-column">
-                          <h3 class="date">Monday 06 Sep</h3>
-                          <h3 class="time">12:00</h3>
-                          <h3 class="location name" id="location">Panadura</h3>
-                          <p class="country">Sri Lanka</p>
-                          <h1 class="temp_c">23°C</h1>
-                          <img id="weatherIcon" class="weatherIcon1 img-fluid w-50" src="./assests/images/cloudy-day.png" alt="Cloudy">
-                        </div>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-6">
-              </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
     <section class="weather-container">
-      <div class="container-fluid  mt-5">
+      <div class="container-fluid  mt-5 mb-5">
         <div class="container">
           <div class="row">
             <div class="col-md-6">
@@ -169,68 +145,93 @@
 
 
     <section>
-      <div class="container-fluid mt-5">
+      <div class="container-fluid mt-5 mb-5 weather-forecast">
         <div class="container">
-          <div class="row text-center">
+          <div class="row text-center"  id="forecast-container">
+            <div class="col-12 text-center">
+              <h2 class="mt-5 mb-5">Weather Forecast</h2>
+            </div>
             <div class="col day-card">
                 <h5>Tuesday</h5>
-                <p>23°C</p>
+                <p>25°C</p>
                 <img src="./assests/images/rain-cloud.png" alt="Cloudy">
                 <p></p>
-                <p>20% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
-                <p>18 km/h<h3><i class="bi bi-wind"></i></h3></h3></p>
-                <p>West <h3><i class="bi bi-compass"></i></h3></p>
+                <p>25% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
+                <p>20 km/h<h3><i class="bi bi-wind"></i></h3></h3></p>
             </div>
             <div class="col day-card">
                 <h5>Wednesday</h5>
-                <p>23°C</p>
+                <p>25°C</p>
                 <img src="./assests/images/rain-cloud.png" alt="Cloudy">
                 <p></p>
-                <p>20% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
-                <p>18 km/h <h3><i class="bi bi-wind"></i></h3></p>
-                <p>West <h3><i class="bi bi-compass"></i></h3></p>
+                <p>25% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
+                <p>20 km/h <h3><i class="bi bi-wind"></i></h3></p>
             </div>
             <div class="col day-card">
                 <h5>Thursday</h5>
-                <p>23°C</p>
+                <p>25°C</p>
                 <img src="./assests/images/rain-cloud.png" alt="Cloudy">
                 <p></p>
-                <p>20% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
-                <p>18 km/h <h3><i class="bi bi-wind"></i></h3></p>
-                <p>West <h3><i class="bi bi-compass"></i></h3></p>
+                <p>25% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
+                <p>20 km/h <h3><i class="bi bi-wind"></i></h3></p>
             </div>
             <div class="col day-card">
                 <h5>Friday</h5>
-                <p>23°C</p>
+                <p>25°C</p>
                 <img src="./assests/images/rain-cloud.png" alt="Cloudy">
                 <p></p>
-                <p>20% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
-                <p>18 km/h <h3><i class="bi bi-wind"></i></h3></p>
-                <p>West <h3><i class="bi bi-compass"></i></h3></p>
+                <p>25% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
+                <p>20 km/h <h3><i class="bi bi-wind"></i></h3></p>
             </div>
             <div class="col day-card">
                 <h5>Saturday</h5>
-                <p>23°C</p>
+                <p>25°C</p>
                 <img src="./assests/images/rain-cloud.png" alt="Cloudy">
                 <p></p>
-                <p>20% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
-                <p>18 km/h <h3><i class="bi bi-wind"></i></h3></p>
-                <p>West <h3><i class="bi bi-compass"></i></h3></p>
+                <p>25% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
+                <p>20 km/h <h3><i class="bi bi-wind"></i></h3></p>
             </div>
             <div class="col day-card">
                 <h5>Sunday</h5>
-                <p>23°C</p>
+                <p>25°C</p>
                 <img src="./assests/images/rain-cloud.png" alt="Cloudy">
                 <p></p>
-                <p>20% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
-                <p>18 km/h <h3><i class="bi bi-wind"></i></h3></p>
-                <p>West <h3><i class="bi bi-compass"></i></h3></p>
+                <p>25% Rain <h3><i class="bi bi-umbrella"></i></h3></p>
+                <p>20 km/h <h3><i class="bi bi-wind"></i></h3></p>
             </div>
         </div>
         </div>
       </div>
     </section>
 
+    <section class="weather-news">
+      <div class="container-fluid mt-5 mb-5 ">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 text-center"></div>
+              <h2 class="mb-5">News</h2>
+            </div>
+          </div>
+          <div class="row text-center justify-content-center" id="news-container">
+            <div class="col-lg-12 col-md-6 col-xs-4">
+            </div>
+            <div class="col-lg-12 col-md-6 col-xs-4"></div>
+            <div class="col-lg-12 col-md-6 col-xs-4"></div>
+            <div class="col-lg-12 col-md-6 col-xs-4"></div>
+            <div class="col-lg-12 col-md-6 col-xs-4"></div>
+            <div class="col-lg-12 col-md-6 col-xs-4"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container-fluid mt-5 mb-5 ">
+        <div class="container text-center">
+          <p>All rights received © 2024.</p>
+        </div>
+      </div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
