--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="shortcut icon" href="./assests/images/favicon.ico" type="image/svg+xml">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="./assests/css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="./assests/css/style.css">
 
 
 </head>
@@ -18,7 +19,7 @@
           <div class="row">
               <nav class="navbar navbar-expand-lg ">
                   <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Weather Guide</a>
+                    <a class="navbar-brand" href="./">Weather Guide</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -28,10 +29,10 @@
                           <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">News</a>
+                          <a class="nav-link" href="#">Weather Forecast</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">About Us</a>
+                          <a class="nav-link" href="#">News</a>
                         </li>
                       </ul>
                     </div>
@@ -76,7 +77,8 @@
       <div class="container-fluid  mt-5 mb-5">
         <div class="container">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="fade-up"
+            data-aos-duration="3000">
                 <div class="p-3 bg-info ">
                     <h3 class="date">Friday, September 6, 2024</h3>
                     <h3 class="time">12:00</h3>
@@ -104,7 +106,7 @@
                     </table>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="fade-down"  data-aos-easing="linear"   data-aos-duration="1500">
                 <div class="p-3 bg-info ">
                   <table class="mb-5">
                       <tr>
@@ -149,7 +151,8 @@
         <div class="container">
           <div class="row text-center"  id="forecast-container">
             <div class="col-12 text-center">
-              <h2 class="mt-5 mb-5">Weather Forecast</h2>
+              <h2 class="mt-5 mb-5" data-aos="fade-up"
+              data-aos-duration="3000">Weather Forecast</h2>
             </div>
             <div class="col day-card">
                 <h5>Tuesday</h5>
@@ -237,6 +240,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
     crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./assests/js/app.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
