--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     </header>
 
     <section>
-      <div id="carouselExample" class="carousel slide" data-ride="carousel">
+      <div id="carouselExample" class="carousel slide" data-bs-pause="false" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./assests/images/slider.jpg" class="d-block w-100" alt="slider">
+            <img src="./assests/images/slider-1.png" class="d-block w-100" alt="slider">
           </div>
           <div class="carousel-item">
-            <img src="./assests/images/slider-2.jpg" class="d-block w-100" alt="slider">
+            <img src="./assests/images/slider-2.png" class="d-block w-100" alt="slider">
           </div>
         </div>
         <div class="carousel-caption d-none d-md-block">
